# checkersnotchess

./: .air.toml  .gitignore  Cargo.toml  Dockerfile  astro.config.mjs  bun.lockb  fly.toml  go.mod  go.sum  main.go  package.json
assets/: main.css
posts/: another-test.md  seal-buffers.md  store-pt-1.md  test.md  welcome.md
src/: content.config.ts  main.rs
src/components/: Nav.tsx
src/layouts/: Layout.astro
src/pages/: [id].astro  index.astro
src/posts/: post1.md  post2.md  store_pt1.md  welcome.md
src/styles/: global.css
static/: style.css
templates/: index.html  input.css
